# aguayluz-pr

./: .gitignore  .semgrepignore  Makefile.offline  PRII-AGUAYLUZ.sh  README.md  federation.json  pyproject.toml
.github/workflows/: centinelas-intake.yml  desktop-build.yml  maintenance.yml  refresh.yml  semgrep.yml  template-drift.yml  validate.yml
PRII-AGUAYLUZ.app/Contents/: Info.plist
PRII-AGUAYLUZ.app/Contents/MacOS/: PRII-AGUAYLUZ
PRII-AGUAYLUZ.app/Contents/Resources/: AppIcon.icns
config/: alert_mcp_tools.json  alert_modules.yaml  federation_manifest.yaml  module.yaml  validation_gates.yaml
dashboard/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
dashboard/src/: App.jsx  index.css  main.jsx
dashboard/src/components/: AiQueryPanel.jsx  AssetDetail.jsx  AssetMap.jsx  AssetsTable.jsx  ErrorBoundary.jsx  MonitoringCharts.jsx  MycelialMapLayers.jsx  OutagesPanel.jsx  ReviewQueue.jsx  ReviewRecordCard.jsx  StatsBar.jsx
dashboard/src/components/common/: PageHeader.jsx  Panel.jsx  PanelState.jsx  StatTile.jsx
dashboard/src/components/layout/: DashboardLayout.jsx  Sidebar.jsx
dashboard/src/contexts/: SidebarContext.jsx
dashboard/src/hooks/: use-mobile.js
dashboard/src/lib/: PageNotFound.jsx  aguayluz-format.js  api.js  csv.js  format.js  hooks.js  mycelialHooks.js  query-client.js  sectors.js
dashboard/src/pages/: AnalyticsPage.jsx  AssetsPage.jsx  Dashboard.jsx  EventDetailPage.jsx  LiveLogsPage.jsx  MapPage.jsx  MonitoringPage.jsx  MunicipioDetailPage.jsx  MycelialAssistantPage.jsx  OutagesPage.jsx  OverviewPage.jsx  RepoAnalyzerPage.jsx  ReviewPage.jsx  SectorDetailPage.jsx
data/: aee_incidents.jsonl  alert_dependency_edges.jsonl  alert_events.jsonl  alert_gaps.jsonl  service_events.jsonl  utility_assets.jsonl
data/geo/: pr_barrios.geojson  pr_municipios.json  pr_natural_features.geojson  pr_natural_features.json
desktop/: README.md  _page.py  app_server.py  config.py  launch.py  pyinstaller.spec  setup.py
docs/: ALERT_SYSTEM.md  MERGE_TO_GITHUB.md  MYCELIAL_RUNTIME_MODULE.md  ROAD_TO_100.md  SPATIAL_BASELINE_GRID.md  UI_CLEANUP_PLAN.md  VERSION_MANIFEST.json
registry/spatial/: pr_grid_full_cell_index_saturated_manifest.md
schemas/: aguayluz_bridge_summary.schema.json  alert_dependency_edge.schema.json  alert_event.schema.json  alert_gap.schema.json  alert_module.schema.json  asset_crosswalk.schema.json  base44_export.schema.json  grid_cell_aggregation.schema.json  integration_report.schema.json  monitoring_reading.schema.json  observation_source.schema.json  pr_natural_feature.schema.json  raw_observation.schema.json  review_queue.schema.json  service_event.schema.json  source_license.schema.json  source_manifest.schema.json  utility_asset.schema.json  verification_status.schema.json
schemas/sql/: alert_system.sql
scripts/: build_alert_system.py  build_alerts.py  build_pr_geo_boundaries.py  build_pr_municipios_geo.py  build_water_alerts.py  build_water_power_crosswalk.py  enrich_waters_nhd.py  federation_export.py  federation_export_mycelial.py  fetch_luma_live.py  import_local_hydro_assets.py  ingest_aee.py  ingest_centinelas_dispatch.py  ingest_echo.py  ingest_fema.py  ingest_news_event.py  ingest_nws_alerts.py  ingest_osha.py  ingest_power.py  ingest_preps.py  ingest_sdwis_violations.py  ingest_usgs_levels.py  ingest_usgs_quakes.py  ingest_usgs_water.py  ingest_water.py  mycelial_observation_aggregate.py  mycelial_observation_common.py  mycelial_observation_dedupe.py  mycelial_observation_export.py  mycelial_observation_ingest.py  mycelial_observation_normalize.py  mycelial_observation_verify.py  refresh.py  smoke_test.py  validate_pr_grid.py  validate_repo.py
scripts/deploy/: README.md  com.aguayluz.refresh-daily.plist  com.aguayluz.refresh-weekly.plist
server/backend/: main.py  main_mycelial.py  mycelial.py
src/aguayluz/: __init__.py  alert_db.py  alert_validation.py  alerts.py  cli.py  confidence.py  impact.py  models.py  mycelial_models.py  validation.py  water_alerts.py
src/aguayluz/alert_promotion/: __init__.py  osha.py  seismic.py  weather.py
src/aguayluz/maintenance/: __init__.py  runner.py
src/aguayluz/maintenance/adapters/: __init__.py  local.py
src/aguayluz/waters/: __init__.py  client.py  endpoints.py  errors.py  mapping.py  navigation.py
tests/: conftest.py  test_adapter_local.py  test_alert_impact.py  test_alerts.py  test_backend_events_api.py  test_desktop_app_server.py  test_federation_contract_compat.py  test_federation_export.py  test_federation_export_e2e.py  test_fetch_luma_live.py  test_import_local_hydro_assets.py  test_ingest_aee.py  test_ingest_centinelas_dispatch.py  test_ingest_osha.py  test_ingest_sdwis_violations.py  test_ingest_usgs_levels.py  test_ingest_usgs_quakes.py  test_ingest_usgs_water.py  test_ingest_water.py  test_maintenance_corrections.py  test_maintenance_detection.py  test_maintenance_wiring.py  test_mycelial_observation_backend_contract.py  test_mycelial_observation_pipeline.py  test_mycelial_runtime.py  test_navigation.py  test_osha_alerts.py  test_pr_geo_boundaries.py  test_schemas.py  test_seismic_alerts.py  test_validate_repo.py  test_water_alerts.py  test_water_power_crosswalk.py  test_waters_client.py  test_waters_mapping.py  test_weather_alerts.py
tests/fixtures/: osha_inspections_sample.json  sdwis_geographic_area_sample.json  sdwis_violations_sample.json  usgs_dv_sample.json  usgs_pr_quakes_sample.json  usgs_pr_sites_sample.rdb
tests/fixtures/waters/: drainagearea_v3.json  gnis_pr.json  pointindexing_lago_la_plata.json  upstreamdownstream_vpu21.json
