[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aguayluz-pr"
version = "0.1.0"
description = "Puerto Rico water/power/utility infrastructure intelligence producer for the Federation control plane."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "jotaele44" }]
keywords = ["puerto-rico", "epa", "nhdplus", "waters", "utility", "infrastructure", "federation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.6",
  "pynhd>=0.16",
  "pyyaml>=6.0",
  "jsonschema>=4.21",
  "typer>=0.12",
  "prii-maintenance @ git+https://github.com/jotaele44/thehub-pr.git@3c9e51e3de406f8455605a06fabd4823452d9b63#subdirectory=packages/prii_maintenance",
  "prii-export-utils @ git+https://github.com/jotaele44/thehub-pr.git@c007a728910128efebcda79bdbe6b9b33212551e#subdirectory=packages/prii_export_utils",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-httpx>=0.30",
  "pytest-cov>=5",
  "ruff>=0.5",
]
geo = [
  "geopandas>=0.14",
]

[project.scripts]
aguayluz = "aguayluz.cli:app"

[project.urls]
"Skill spec" = "https://github.com/jotaele44/aguayluz-pr/blob/main/AGUAYLUZ_PR_SKILL.md"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/aguayluz"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = ["-ra", "--strict-markers"]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "live: hits the live EPA WATERS API; skipped unless EPA_WATERS_API_KEY is set",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
"scripts/mycelial_observation_*.py" = ["I001"]
