[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aguayluz-pr"
version = "0.1.0"
description = "Puerto Rico water/power/utility infrastructure intelligence producer for the Federation control plane."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "jotaele44" }]
keywords = ["puerto-rico", "epa", "nhdplus", "waters", "utility", "infrastructure", "federation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.6",
  "pynhd>=0.16",
  "pyyaml>=6.0",
  "jsonschema>=4.21",
  "typer>=0.12",
  # Shared federation libraries hosted in thehub-pr/packages. Resolved via a
  # local path source (see [tool.uv.sources]) instead of a pinned git SHA, so a
  # change to the shared code is picked up with no per-repo dependency bump.
  # Requires thehub-pr to be checked out as a sibling of this repo.
  "prii-maintenance",
  "prii-export-utils",
]

[tool.uv.sources]
# Editable local path sources for the shared federation libraries. thehub-pr is
# always checked out as a sibling of this repo (locally and in CI); editing the
# package under thehub-pr/packages is reflected here immediately, no SHA bump.
prii-maintenance = { path = "../thehub-pr/packages/prii_maintenance", editable = true }
prii-export-utils = { path = "../thehub-pr/packages/prii_export_utils", editable = true }

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-httpx>=0.30",
  "pytest-cov>=5",
  "ruff>=0.5",
]
# Heavy geospatial stack used only by scripts/build_pr_geo_boundaries.py (GDAL-backed).
# Kept out of the default install so `pip install -e .[dev]` and CI stay lightweight.
geo = [
  "geopandas>=0.14",
]

[project.scripts]
aguayluz = "aguayluz.cli:app"

[project.urls]
"Skill spec" = "https://github.com/jotaele44/aguayluz-pr/blob/main/AGUAYLUZ_PR_SKILL.md"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/aguayluz"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = ["-ra", "--strict-markers"]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "live: hits the live EPA WATERS API; skipped unless EPA_WATERS_API_KEY is set",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
